--- a/index.html
+++ b/index.html
@@ -149,6 +149,125 @@
                 <li><img src="img/parceiros/wildbeast.svg" alt="" srcset=""></li>
             </ul>
         </section>
+
+
+
+        <section class="depoimento">
+
+            <div>
+                <img src="img/fotos/depoimento.jpg" alt="">
+            </div>
+
+
+            <div class="depoimento-conteudo">
+
+                <blockquote class="font-1-xl cor-p5">
+                    <p>Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo à todos que amo</p>
+                </blockquote>
+                <span class="font-1-m-b cor-p4" >Ana Julia</span>
+
+            </div>
+
+        </section>
+
+
+
+        <article class="seguros-bg">
+
+            <div class="seguros container">
+
+                <h2 class="font-1-xxl cor-0">seguros<span class="cor-p1">.</span></h2>
+
+                <div class="seguros-item">
+
+                    <h3 class="font-1-xl cor-6">PRATA</h3>
+                    <span class="font-1-xl cor-0">R$ 199 <span class="font-1-xs cor-6">Mensal</span> </span>
+
+                    <ul class="font-2-m cor-0">
+                        <li>Duas trocas por ano</li>
+                        <li>Assistência técnica</li>
+                        <li>Suporte 08h às 18h</li>
+                        <li>Cobertura estadual</li>
+                    </ul>
+
+                    <a href="./orcamento.html" class="btn secundario" >Inscreva-se</a>
+
+                </div>
+
+                <div class="seguros-item">
+
+                    <h3 class="font-1-xl cor-p1">Ouro</h3>
+                    <span class="font-1-xl cor-0">R$ 199 <span class="font-1-xs cor-6">Mensal</span> </span>
+
+                    <ul class="font-2-m cor-0">
+                        <li>Cinco trocas por ano</li>
+                        <li>Assistência especial</li>
+                        <li>Suporte 24h</li>
+                        <li>Cobertura nacional</li>
+                        <li>Desconto em parceiros</li>
+                        <li>Acesso ao Clube Bikcraft</li>
+                    </ul>
+
+                    <a href="./orcamento.html" class="btn" >Inscreva-se</a>
+
+                </div>
+
+            </div>
+
+        </article>
+
+
+        <footer class="footer-bg">
+
+            <div class="footer container">
+
+                <img class="logo" src="img/bikcraft.svg" alt="">
+
+
+                <div class="footer-contato">
+
+                    <h3 class="font-2-1-b cor-0">Contato</h3>
+                    <ul class="cor-5 font-2-m">
+                        <li><a href="tel:(31)984888596">Telefone(31)98488 8596</a></li>
+                        <li><a href="mailto:rafaeldamasceno2000@gmail.com">Email:rafaeldamasceno2000@gmail.com</a></li>
+                        <li>Rua lorem ipsun, 42 - Botafogo</li>
+                        <li>Minas Gerais - MG</li>
+
+                    </ul>
+
+                    <div class="footer-redes">
+
+                        <a href="#"><img src="img/redes/instagram.svg" alt=""></a>
+                        <a href="#"><img src="img/redes/facebook.svg" alt=""></a>
+                        <a href="#"><img src="img/redes/youtube.svg" alt=""></a>
+
+                    </div>
+
+                </div>
+
+                <div class="footer-informacoes">
+
+                    <h3 class="font-2-1-b cor-0">Informações</h3>
+                    <nav>
+                        <ul class="font-1-m cor-0">
+                            <li><a href="#">Bicicletas</a></li>
+                            <li><a href="#">Seguros</a></li>
+                            <li><a href="#">Contato</a></li>
+                            <li><a href="#">Termos e condições</a></li>
+                        </ul>
+                    </nav>
+
+                </div>
+
+
+                 <p class="font-2-m cor-6 footer-copy">Bikcraft © Alguns direitos reservados.</p>
+
+
+            </div>
+
+
+
+        </footer>
      
 
 
