--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <li>
                     <a href=".bicicletas/nimbus.html">
                         <img src="img/bicicletas/nimbus-home.jpg" alt="">
-                        <h3 class="FONT-1-XL">Numbus Migth</h3>
+                        <h3 class="font-1-xl">Numbus Migth</h3>
                         <span class="font-2-m cor-8">RS 4499</span>
                     </a>
                     
@@ -253,7 +253,7 @@
                             <li><a href="#">Bicicletas</a></li>
                             <li><a href="#">Seguros</a></li>
                             <li><a href="#">Contato</a></li>
-                            <li><a href="#">Termos e condições</a></li>
+                            <li><a href="./termos.html">Termos e condições</a></li>
                         </ul>
                     </nav>
 
