--- a/seguros.html
+++ b/seguros.html
@@ -58,7 +58,7 @@
                         <li>Cobertura estadual</li>
                     </ul>
 
-                    <a href="./orcamento.html" class="btn secundario" >Inscreva-se</a>
+                    <a href="./orcamento.htmltipo=seguro&produto=prata" class="btn secundario" >Inscreva-se</a>
 
                 </div>
 
@@ -76,7 +76,7 @@
                         <li>Acesso ao Clube Bikcraft</li>
                     </ul>
 
-                    <a href="./orcamento.html" class="btn" >Inscreva-se</a>
+                    <a href="./orcamento.html?tipo=seguro&produto=ouro" class="btn" >Inscreva-se</a>
 
                 </div>
 
@@ -156,18 +156,18 @@
 
             <dl>
                 <div>
-                    <dt class="font-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
+                    <dt class="font-1-m-b"> Qual forma de pagamento vocês aceitam?</dt>
                     <dd class="font-2-s cor-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
                 </div>
 
                 <div>
-                    <dt class="font-1-m-b">Como posso entrar em contato?</dt>
+                    <dt class="font-1-m-b"> Como posso entrar em contato?</dt>
                     <dd class="font-2-s cor-9" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non reiciendis explicabo, eligendi nobis provident quibusdam nostrum nemo est perspiciatis</dd>
                 </div>
 
                 <div>
 
-                    <dt class="font-1-m-b">Vocês possuem algum desconto?</dt>
+                    <dt class="font-1-m-b"> Vocês possuem algum desconto?</dt>
                     <dd class="font-2-s cor-9">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque consectetur facere magnam impedit laborum harum ex velit, laudantium neque enim quaerat assumenda, voluptate esse distinct</dd>
 
                 </div>
@@ -175,20 +175,20 @@
 
                 <div>
 
-                    <dt class="font-1-m-b">Qual a garantia que possuo?</dt>
+                    <dt class="font-1-m-b"> Qual a garantia que possuo?</dt>
                     <dd class="font-2-s cor-9">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat corporis vel cum molestiae, facere beatae eligendi quos ipsam error inc</dd>
 
                 </div>
 
                 <div>
 
-                    <dt class="font-1-m-b">Posso parcelar no boleto?</dt>
+                    <dt class="font-1-m-b"> Posso parcelar no boleto?</dt>
                     <dd class="font-2-s cor-9">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium, est? Quidem accusamus maiores quaerat et illo illum quibusd</dd>
 
                 </div>
 
                 <div>
-                    <dt class="font-1-m-b">Quantas trocas posso fazer ao ano?</dt>
+                    <dt class="font-1-m-b"> Quantas trocas posso fazer ao ano?</dt>
                     <dd class="font-2-s cor-9">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta ipsum minima porro culpa eligendi totam nisi vel maxime, tenetur ipsa quas voluptatem aliquid et repudiandae autem excepturi in cumque</dd>
                 </div>
             </dl>
@@ -256,6 +256,10 @@
 
 
         </footer>
+
+
+
+        <script src="javascript/script.js"></script>
     
     
 </body>
